<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context="ru.evg.communication.ReceiveMessageActivity">


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textAlignment="center" />


    <TextView
        android:id="@+id/rma_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />


    <TextView
        android:id="@+id/rma_textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/rma_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/rma_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick_rma_button"
        android:text="@string/send" />


</LinearLayout>
